--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
              */
              
              body {
-                background:url(background.png) no-repeat center center fixed; 
+                background:url(https://iccowalls.storage.googleapis.com/7990117774_f6e8175ce4_o.jpg) no-repeat center center fixed; 
                 -webkit-background-size: cover;
                 -moz-background-size: cover;
                 -o-background-size: cover;
