--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 
         <!-- Add your site or application content here -->
         <article>
-            <p><strong>Pull Request Five</strong>, We make random stuff.</p>
+          <p><strong>Pull Request Five</strong><br />We make random stuff.</p>
         </article>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
